--- a/index.html
+++ b/index.html
@@ -1,1 +1,199 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">  
+    <meta name="milestone" content="Portfolio">
+    <title>kevin's site</title>  
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
+
+  </head>
+  <body>
+    <header id="nav">
+      <div class="big-nav">
+        <ul>
+            <li><a href="#hero-section"><i class="bi bi-house-door"></i></a></li>
+            <li><a href="#about-target"><p>About</p></a></li>
+            <li><a href="#skills-target"><p>Skills</p></a></li>
+            <li><a href="#contact-target"><p>Contact</p></a></li>
+            <li><a href="others/projects.html"><p>Projects</p></a></li>
+
+        </ul>
+      </div>
+      <div class="off-screen-menu">
+        <ul>
+          <li><a href="#hero-section"><i class="bi bi-house-door"></i></a></li>
+          <li><a href="#about-target"><p>About</p></a></li>
+          <li><a href="#skills-target"><p>Skills</p></a></li>
+          <li><a href="#contact-target"><p>Contact</p></a></li>
+          <li><a href="others/projects.html"><p>Projects</p></a></li>
+
+        </ul>
+      </div>
+      <nav>
+        <div class="ham-menu">
+          <span></span>
+          <span></span>
+          <span></span>
+       </div>
+      </nav>
+    </header>
+    <!-- Hero section -->
+  	<section id="hero-section">
+      <h2><i class="bi bi-arrow-90deg-down"></i>  Click me!  <i class="bi bi-arrow-90deg-down"></i></h2>
+      <div id="play-button">
+        <button class="button"></button>
+      </div>
+      <div class="info-container">
+          <div class="profile-pic"> <!--remember to add in fade-in-text class to this -->
+          </div>
+          <div class="text"><!--remember to add in fade-in-text class to this -->
+            <h1 class="name">Kevin Chen</h1>
+            <p class="slogan">Bringing my Best</p>
+          </div>
+        </div>
+      </div>
+      <div id="hero-background">
+        <div id="container">
+          <div class="cloud">
+              <div class="cloudBubble1">
+              </div>
+              <div class="cloudBubble2">
+              </div>
+          </div>
+        </div>
+  	</section>
+
+    <!--note: for the skills and any other area that require multiple photos, you could implement the new thing you learned from youtube about the multiple cards and the hover effect -->
+    
+  	<!-- Mission/Meet-me section -->
+    <section class="container" id="mission-section">
+      <h1 class="my-mission-header" id="my-mission-header">About Me!</h1>
+      <div id="about-target"></div> <!---->
+        <div class="row">
+          <div class="col-sm-12 col-md-6">
+            <div class="mission-img">
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-6">
+            <p class="mission-about">Thanks for landing here on my website! I am a student at Texas A&M University pursuing my Bachelors of Science in Computer Science. <br><br>My mission is to become a Full-Stack Developer. I have a passion for Software Development and I want to be able to make coding feel natural at my finger tips and to create projects that can help solve challenges for users!  </p>
+          </div>
+            
+        </div>
+      </section>
+  	</section>
+  
+    <!-- Skills section -->
+    <section id="skills-section">
+      <h1 class="skills-header">Skills</h1>
+      <div id="skills-target"></div> <!---->
+      <p>(I am constantly learning new skills and improving my current ones!)</p>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-2 col-md-4 col-sm-6" id="py">
+          <i class="devicon-python-plain colored"></i>
+            <div class="mastery">
+              <i class="bi bi-bookmark-fill"></i>
+              <i class="bi bi-bookmark-fill"></i>
+              <i class="bi bi-bookmark-fill"></i>
+              <i class="bi bi-bookmark-fill"></i>
+              <i class="bi bi-bookmark"></i>
+            </div>
+          </div>
+          <div class="col-lg-2 col-md-4 col-sm-6" id="html">
+          <i class="devicon-html5-plain colored"></i>
+            <div class="mastery">
+              <i class="bi bi-bookmark-fill"></i>
+              <i class="bi bi-bookmark-fill"></i>
+              <i class="bi bi-bookmark-fill"></i>
+              <i class="bi bi-bookmark-fill"></i>
+              <i class="bi bi-bookmark-fill"></i>
+            </div>
+          </div>
+          <div class="col-lg-2 col-md-4 col-sm-6" id="css">
+          <i class="devicon-css3-plain colored"></i>
+            <div class="mastery">
+              <i class="bi bi-bookmark-fill"></i>
+              <i class="bi bi-bookmark-fill"></i>
+              <i class="bi bi-bookmark-fill"></i>
+              <i class="bi bi-bookmark-fill"></i>
+              <i class="bi bi-bookmark"></i>
+            </div>
+          </div>
+          <div class="col-lg-2 col-md-4 col-sm-6" id="js">
+          <i class="devicon-javascript-plain colored"></i>
+            <div class="mastery">
+              <i class="bi bi-bookmark-fill"></i>
+              <i class="bi bi-bookmark-fill"></i>
+              <i class="bi bi-bookmark-fill"></i>
+              <i class="bi bi-bookmark-fill"></i>
+              <i class="bi bi-bookmark"></i>
+            </div>
+          </div>
+          <div class="col-lg-2 col-md-4 col-sm-6" id="bs">
+          <i class="devicon-bootstrap-plain colored"></i>
+            <div class="mastery">
+              <i class="bi bi-bookmark-fill"></i>
+              <i class="bi bi-bookmark-fill"></i>
+              <i class="bi bi-bookmark-fill"></i>
+              <i class="bi bi-bookmark-fill"></i>
+              <i class="bi bi-bookmark-fill"></i>
+            </div>
+          </div>
+          <div class="col-lg-2 col-md-4 col-sm-6" id="cpp">
+          <i class="devicon-cplusplus-plain colored"></i>
+            <div class="mastery">
+              <i class="bi bi-bookmark-fill"></i>
+              <i class="bi bi-bookmark-fill"></i>
+              <i class="bi bi-bookmark-fill"></i>
+              <i class="bi bi-bookmark"></i>
+              <i class="bi bi-bookmark"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+  	</section>
+  
+    <!-- Contact Section -->
+    <section id="contact-section">
+      <h1 class="contact-header">Contact me!</h1>
+      <div id="contact-target"></div> <!---->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 col-sm-12">
+            <a href="https://www.instagram.com/kev.lnc/" target="_blank"><i class="bi bi-instagram"></i></a>
+            <p>kev.inc</p>
+          </div>
+          <div class="col-md-4 col-sm-12">
+            <a href="https://www.linkedin.com/in/kaikevinc" target="_blank"><i class="bi bi-linkedin"></i></a>
+            <p>kaikevinc</p>
+
+          </div>
+          <div class="col-md-4 col-sm-12">
+            <a href="mailto:kchen2561@gmail.com"><i class="bi bi-envelope-fill" target="_blank"></i> </a>
+            <p>kchen2561@gmail.com</p>
+          </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  
+    <!-- Footer section -->
+    <section id="footer-section">
+      <footer>
+        <p id="copyright"><i class="bi bi-c-square"></i>   Kevin Chen 2024</p>
+        <li><a href="https://www.instagram.com/kev.lnc/" target="_blank"><i class="bi bi-instagram"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/kaikevinc" target="_blank"><i class="bi bi-linkedin"></i></a></li>
+      </footer>
+    </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
+  </body>
+</html>
